refact user swag anotation
refact swag Tags anotation and group user api in specific group
